--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
-body {
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +16,31 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+.swiper-pagination-bullet-active {
+  background: #863339;
+  /* opacity: 0.4 !important; */
 }
+
+.swiper-pagination-bullet {
+  width: 30%;  
+  /* color: gray; */
+  opacity: 0.2;
+  /* height: 5px; */
+  border-radius: 0px;
+}
+.swiper-pagination-bullets{
+  width: 50%;
+}
+.swiper-paginations{
+  bottom: 20px;
+}
+.swiper-pagination {
+  bottom: 0px;
+  /* top: 0px; */
+  /* height: min-content; */
+}
+
+
+
